# Lab4_PET

./: README.md
Geant4Sim/: CMakeLists.txt  pet_simulation.cc
Geant4Sim/build7/: Makefile  cmake_install.cmake  det.mac
Geant4Sim/include/: action.hh  construction.hh  generator.hh  run.hh
Geant4Sim/src/: construction.cc  detector.cc  event.cc  generator.cc  run.cc
Geant4Sim2/: CMakeLists.txt  det.mac
Geant4Sim2/buildExample/: scoring.root
Geant4Sim2/include/: EventAction.hh  PrimaryGeneratorAction.hh
Geant4Sim2/src/: DetectorConstruction.cc  EventAction.cc  RunAction.cc
Geant4SimA/: README.md  loop.mac  pet_simulation.cc  scandet.mac
Geant4SimA/buildExample/: CMakeCache.txt  Makefile  cmake_install.cmake  output0.root  pet_simulation  scandet.mac  vis.mac
Geant4SimA/buildExampleLoop/: CMakeCache.txt  Makefile  cmake_install.cmake  output0.root  output1.root  output2.root  output3.root  output4.root  pet_simulation
Geant4SimA/include/: construction.hh  generator.hh  physics.hh
Geant4SimA/src/: construction.cc  detector.cc  generator.cc  run.cc
Geant4SimB/: CMakeLists.txt  README.md
Geant4SimB/buildExample/: CMakeCache.txt  Makefile  cmake_install.cmake  det.mac  exampleB3a  init_vis.mac  output0.root  scoring.root
Geant4SimB/buildExampleLoop/: exampleB3a  output0.root  output1.root  output2.root  output3.root  output4.root  scoring.root  vis1.mac
Geant4SimB/include/: DetectorConstruction.hh  RunAction.hh
Geant4SimB/output/: scoring.root
Geant4SimB/src/: DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  (+1 more)
MatlabFiles/: EllipticalErrors.m  PET.m
(+12 files in other folders)
